0-ingress/destination-0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: serviceb
spec:
  host: serviceb
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN 
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
